--- a/Biblioteca-Digital/src/main/resources/templates/index.html
+++ b/Biblioteca-Digital/src/main/resources/templates/index.html
@@ -10,7 +10,7 @@
 
 <section class="text-center text-light centrar">
     <h1 class="titulo font-monospace t-stroke t-shadow-halftone glitch" data-text="¡Bienvenido a la Libreria!">
-        ¡Bienvenido a la Libreria!</h1>
+        ¡Bienvenido a Biblioteca Digital!</h1>
 
     <h1 class="nombreUsuario" th:if="${session.usuariosession != null}"
         th:text="${session.usuariosession.nombre + ' ' + session.usuariosession.apellido}"></h1>
