--- a/Biblioteca-Digital/src/main/resources/templates/editoriales.html
+++ b/Biblioteca-Digital/src/main/resources/templates/editoriales.html
@@ -12,12 +12,12 @@
 
     <div><h5>Buscar libro por Editorial</h5></div>
     <div>
-        <form action="/editoriales" method="GET" enctype="multipart/form-data">
-            <select class="filtrar-select" name="idEditorial">
+        <form action="/publisher" method="GET" enctype="multipart/form-data">
+            <select class="filtrar-select" name="idPublisher">
                 <option selected disabled>Seleccionar</option>
                 <option>Todos</option>
-                <option th:each="editorial : ${editorialesA}" th:value="${editorial.id}"
-                        th:text="${editorial.nombre}"></option>
+                <option th:each="publisher : ${publisherActive}" th:value="${editorial.id}"
+                        th:text="${publisher.name}"></option>
             </select>
 
             <div class="filtrar-boton">
@@ -28,37 +28,48 @@
 </div>
 
 <div sec:authorize="hasRole('ADMIN')" class="form-group2 centrar-boton text-center">
-    <a href="/editoriales/registro" class="btn btn-dark" tabindex="-1" role="button">Agregar editorial</a>
+    <a href="/publisher/register" class="btn btn-dark" tabindex="-1" role="button">Agregar editorial</a>
 </div>
 
 <!--CARDS editoriales-->
 <div class="contenedor">
-    <div class="contenedorHijo" th:each="editorial : ${editoriales}">
+
+    <div class="contenedorHijo" th:each="publisher : ${publishers}">
+
         <div class="card mb-3 bg-dark text-white">
+
             <div class="row g-0">
+
                 <div class="col-md-4 imagen-card">
-                    <img th:src="@{'/foto/editorial/' + ${editorial.id}}" class="img-fluid rounded-start"
+                    <img th:src="@{'/photo/publisher/' + ${publisher.id}}" class="img-fluid rounded-start"
                          alt="Editorial">
                 </div>
+
                 <div class="col-md-8">
+
                     <div class="card-body">
-                        <h5 class="card-title" th:text="${editorial.nombre}"></h5><br>
+
+                        <h5 class="card-title" th:text="${publisher.name}"></h5><br>
+
                         <ul>
-                            <li sec:authorize="hasRole('ADMIN')" th:text="'ALTA: ' + ${editorial.alta}"></li>
-                            <li sec:authorize="hasRole('ADMIN')" th:text="'BAJA: ' + ${editorial.baja}"></li>
+                            <li sec:authorize="hasRole('ADMIN')" th:text="'ALTA: ' + ${publisher.register}"></li>
+                            <li sec:authorize="hasRole('ADMIN')" th:text="'BAJA: ' + ${publisher.unsubscribe}"></li>
                         </ul>
+
                         <div sec:authorize="hasRole('ADMIN')" class="form-group2 text-center">
-                            <a th:if="${editorial.baja != null}" th:href="@{/editoriales/alta(id=__${editorial.id}__)}">
+
+                            <a th:if="${publisher.unsubscribe != null}"
+                               th:href="@{/publisher/high(id=__${publisher.id}__)}">
                                 <button type="button" class="btn btn-success btn-sm">Dar alta</button>
                             </a>
-                            <a th:unless="${editorial.baja != null}"
-                               th:href="@{/editoriales/baja(id=__${editorial.id}__)}">
+                            <a th:unless="${publisher.unsubscribe != null}"
+                               th:href="@{/publisher/low(id=__${publisher.id}__)}">
                                 <button type="button" class="btn btn-danger btn-sm">Dar baja</button>
                             </a>
-                            <a th:href="@{/editoriales/modificar(id=__${editorial.id}__)}">
+                            <a th:href="@{/publisher/update(id=__${publisher.id}__)}">
                                 <button type="button" class="btn btn-warning btn-sm">Modificar</button>
                             </a>
-                            <a th:href="@{/editoriales/eliminar(id=__${editorial.id}__)}">
+                            <a th:href="@{/publisher/delete(id=__${publisher.id}__)}">
                                 <button type="button" class="btn btn-danger btn-sm">Eliminar</button>
                             </a>
                             <!--<a sec:authorize="hasRole('ADMIN')" th:if="${editorial.baja != null}" th:href="@{/editoriales/alta(id=__${editorial.id}__)}" title="Alta"><i class="fa fa-arrow-up text-success"></i></a>-->
@@ -75,31 +86,43 @@
 
 <!--CARDS Libros-->
 <div class="contenedor">
-    <div class="contenedorHijo" th:each="libro : ${libros}">
+
+    <div class="contenedorHijo" th:each="book : ${books}">
+
         <div class="card mb-3 bg-dark text-white">
+
             <div class="row g-0">
+
                 <div class="col-md-4 imagen-card">
-                    <img th:src="@{'/foto/libro/' + ${libro.id}}" class="img-fluid rounded-start" alt="Portada">
+                    <img th:src="@{'/photo/book/' + ${book.id}}" class="img-fluid rounded-start" alt="Portada">
                 </div>
+
                 <div class="col-md-8">
                     <div class="card-body">
-                        <h5 class="card-title" th:text="${libro.titulo}"></h5><br>
+
+                        <h5 class="card-title" th:text="${book.title}"></h5><br>
+
                         <ul>
-                            <li th:text="'ISBN: ' + ${libro.isbn}"></li>
-                            <li th:text="'AUTOR: ' + ${libro.autor.nombre}"></li>
-                            <li th:text="'EDITORIAL: ' + ${libro.editorial.nombre}"></li>
-                            <li th:text="'EJEMPLARES DISPONIBLES: ' + ${libro.ejemplaresRestantes}"></li>
+                            <li th:text="'ISBN: ' + ${book.isbn}"></li>
+                            <li th:text="'AUTOR: ' + ${book.author.name}"></li>
+                            <li th:text="'EDITORIAL: ' + ${book.publisher.name}"></li>
+                            <li th:text="'EJEMPLARES DISPONIBLES: ' + ${book.amountCopiesRemaining}"></li>
                         </ul>
+
                         <div class="form-group2 text-center">
-                            <a class="btn btn-warning" th:href="@{/libros/mostrar/__${libro.id}__}" role="button">Ver
+
+                            <a class="btn btn-warning" th:href="@{/book/view/__${book.id}__}" role="button">Ver
                                 más</a>
-                            <a sec:authorize="hasRole('ADMIN')" th:if="${libro.baja != null}"
-                               th:href="@{/libros/alta(id=__${libro.id}__)}" title="Alta"><i
+
+                            <a sec:authorize="hasRole('ADMIN')" th:if="${book.unsubscribe != null}"
+                               th:href="@{/book/high(id=__${book.id}__)}" title="Alta"><i
                                     class="fa fa-arrow-up text-success"></i></a>
-                            <a sec:authorize="hasRole('ADMIN')" th:unless="${libro.baja != null}"
-                               th:href="@{/libros/baja(id=__${libro.id}__)}" title="Baja"><i
+
+                            <a sec:authorize="hasRole('ADMIN')" th:unless="${book.unsubscribe != null}"
+                               th:href="@{/book/low(id=__${book.id}__)}" title="Baja"><i
                                     class="fa fa-ban text-danger"></i></a>
-                            <a sec:authorize="hasRole('ADMIN')" th:href="@{/libros/modificar(id=__${libro.id}__)}"
+
+                            <a sec:authorize="hasRole('ADMIN')" th:href="@{/book/update(id=__${book.id}__)}"
                                title="Modificar"><i class="fas fa-feather-alt text-warning"></i></a>
                             <!--<a sec:authorize="hasRole('ADMIN')" th:href="@{/libros/eliminar(id=__${libro.id}__)}" title="Eliminar"><i class="fas fa-archive text-danger"></i></a>-->
                         </div>
