--- a/Biblioteca-Digital/src/main/resources/templates/fragments/navbar.html
+++ b/Biblioteca-Digital/src/main/resources/templates/fragments/navbar.html
@@ -2,14 +2,14 @@
     <div class="container-fluid">
         <a class="navbar-brand" href="/">BIBLIOTECA DIGITAL</a>
         <button
-            class="navbar-toggler"
-            type="button"
-            data-bs-toggle="collapse"
-            data-bs-target="#navbarNav"
-            aria-controls="navbarNav"
-            aria-expanded="false"
-            aria-label="Toggle navigation"
-            >
+                class="navbar-toggler"
+                type="button"
+                data-bs-toggle="collapse"
+                data-bs-target="#navbarNav"
+                aria-controls="navbarNav"
+                aria-expanded="false"
+                aria-label="Toggle navigation"
+        >
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse justify-content-between" id="navbarNav">
@@ -19,45 +19,41 @@
                     <a class="nav-link" aria-current="page" href="/">Inicio</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/libros">Libros</a>
+                    <a class="nav-link" href="/book">Libros</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" th:href="@{/author}">Autores</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/editoriales">Editoriales</a>
+                    <a class="nav-link" href="/publisher">Editoriales</a>
                 </li>
-                <li class="nav-item" th:if="${session.usuariosession != null}" sec:authorize="hasRole('ROLE_ADMIN')">
-                    <a class="nav-link" href="/prestamos">Prestamos</a>
+                <li class="nav-item" th:if="${session.usersession != null}" sec:authorize="hasRole('ROLE_ADMIN')">
+                    <a class="nav-link" href="/loan">Prestamos</a>
                 </li>
-                <li class="nav-item" th:if="${session.usuariosession != null}" sec:authorize="hasRole('ROLE_ADMIN')">
-                    <a class="nav-link" href="/usuarios">Usuarios</a>
+                <li class="nav-item" th:if="${session.usersession != null}" sec:authorize="hasRole('ROLE_ADMIN')">
+                    <a class="nav-link" href="/user">Usuarios</a>
                 </li>
             </ul>
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link" href="/registro" th:if="${session.usuariosession == null}">Registrate</a>
+                    <a class="nav-link" href="/user/register" th:if="${session.usersession == null}">Registrate</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/login" th:if="${session.usuariosession == null}">Ingresa</a>
+                    <a class="nav-link" href="/login" th:if="${session.usersession == null}">Ingresa</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" th:href="@{/prestamos/mis-prestamos}" th:if="${session.usuariosession != null}"  sec:authorize="hasRole('ROLE_USUARIO')">Mis Prestamos</a>
+                    <a class="nav-link" th:href="@{/loan/my-loans}" th:if="${session.usersession != null}"
+                       sec:authorize="hasRole('ROLE_USER')">Mis Prestamos</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" th:href="@{/usuario/editar-perfil(id=__${session.usuariosession.id}__)}" th:if="${session.usuariosession != null}" >Editar Perfil</a>
+                    <a class="nav-link" th:href="@{/user/edit-profile(id=__${session.usersession.id}__)}"
+                       th:if="${session.usersession != null}">Editar Perfil</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/logout" th:if="${session.usuariosession != null}">Salir</a>
+                    <a class="nav-link" href="/logout" th:if="${session.usersession != null}">Salir</a>
                 </li>
             </ul>
 
         </div>
     </div>
 </nav>
-
-<!--Código para agregar en cada plantilla-->
-<!--NAVIGATION-->
-<!--
-<nav th:replace="/fragments/navbar :: nav"></nav>
--->
