--- a/Biblioteca-Digital/src/main/resources/templates/modificar-autor.html
+++ b/Biblioteca-Digital/src/main/resources/templates/modificar-autor.html
@@ -8,7 +8,7 @@
 <body>
 <nav th:replace="~{/fragments/navbar :: nav}"></nav>
 
-<a href="/autores">
+<a href="/author">
     <i class="fas fa-arrow-left"></i>
 </a>
 
@@ -37,6 +37,7 @@
                     <div class="col-sm-10 w-100">
                         <input type="text" class="form-control" id="name" name="name" th:field="*{name}"/>
                     </div>
+                    <span th:errors="*{name}" class="text-danger" th:if="${#fields.hasErrors('name')}"></span>
                 </div>
 
                 <div class="mb-3">
