--- a/Biblioteca-Digital/src/main/resources/templates/fragments/footer.html
+++ b/Biblioteca-Digital/src/main/resources/templates/fragments/footer.html
@@ -1,9 +1,9 @@
-<footer class="w-100 bg-dark d-flex justify-content-center pie bottom-0">
+<footer>
     <div>
-        <p class="w-100 text-center text-white small">
+        <p class="copyright">
             Copyright &copy; Your Website 2024 - Lucas Aramberry
         </p>
-        <ul class="enlacesFooter">
+        <ul class="links-footer">
             <a href="#"><li class="liFooter">Politica de privacidad</li></a>
             <a href="#"><li class="liFooter">Terminos y condiciones</li></a>
         </ul>
