--- a/Biblioteca-Digital/src/main/resources/static/css/style.css
+++ b/Biblioteca-Digital/src/main/resources/static/css/style.css
@@ -9,11 +9,13 @@ html{
 }
 
 body {
-    min-height: 100%;
-    min-width: 100%;
+    width: 100%;
+    min-height: 100vh;
     margin: 0;
     background: linear-gradient(160deg, rgba(0, 0, 0, 0.93) 20%, #212529 79.9%);
     background-attachment: fixed;
+    position: relative;
+    padding-bottom: 4rem;
 }
 
 h1 {
@@ -44,6 +46,16 @@ ul{
 
 .bg-none{
     background-image: none;
+}
+
+.botones{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.botones a{
+    margin-bottom: 1rem;
 }
 
 /*******************************animacioness titulo****************************/
@@ -98,7 +110,7 @@ ul{
 }
 
 .enlacesSub{
-    margin-bottom: 1.2rem;
+    margin: 1.5rem 0rem;
 }
 
 .enlaces-sub{
@@ -137,9 +149,12 @@ ul{
 }
 
 .card{
-    display: flex;
-    flex-direction: column;
-    max-width: 450px;
+        display: flex;
+        flex-direction: row;
+        max-width: 450px;
+        background-color: #212529;
+        color: #fff;
+        margin: 1rem;
 }
 
 .imagen-card{
@@ -148,20 +163,55 @@ ul{
     align-items: center;
 }
 
+.imagen-card img {
+    width: 100%;
+}
+
+/*Login*/
+
+.form-signin {
+  max-width: 330px;
+  padding: 1rem;
+}
+
+.form-signin .form-floating:focus-within {
+  z-index: 2;
+}
+
+.form-signin input[type="email"] {
+  margin-bottom: -1px;
+  border-bottom-right-radius: 0;
+  border-bottom-left-radius: 0;
+}
+
+.form-signin input[type="password"] {
+  margin-bottom: 10px;
+  border-top-left-radius: 0;
+  border-top-right-radius: 0;
+}
+
 /****************************************ESTILOS FOOTER**************************************/
 
-.pie {
-    margin-top: 5rem;
-    padding: 10px;
+footer {
+    position: absolute;
     bottom: 0;
-    position: fixed;
+    left: 0;
+    width: 100%;
+    height: 4rem;
+    background-color: #212529;
+    color: #fff;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
-.pie p {
-    margin-bottom: 0;
+.copyright{
+    font-size: .875em;
+    text-align: center;
+    margin-bottom: 0px;
 }
 
-.enlacesFooter{
+.links-footer{
     display: flex;
     flex-direction: row;
     justify-content: center;
@@ -169,7 +219,7 @@ ul{
     margin-bottom: 0;
 }
 
-.enlacesFooter ul a{
+.links-footer ul a{
     display: flex;
     justify-content: space-around;
     text-decoration: none;
@@ -232,6 +282,12 @@ li:hover{
 .img-fluid1{
     width: 13.5rem;
     height: 20rem;
+}
+
+.card-body{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .card-body1{
