--- a/Biblioteca-Digital/src/main/resources/templates/libros.html
+++ b/Biblioteca-Digital/src/main/resources/templates/libros.html
@@ -19,19 +19,19 @@
     </a>
 
     <ul class="dropdown-menu" aria-labelledby="dropdownMenuLink">
-        <li><a class="dropdown-item" href="/autores">Autor</a></li>
-        <li><a class="dropdown-item" href="/editoriales">Editorial</a></li>
+        <li><a class="dropdown-item" href="/author">Autor</a></li>
+        <li><a class="dropdown-item" href="/publisher">Editorial</a></li>
     </ul>
 </div>
 
 <div class="filtrar bg-dark text-white">
     <div><h5>Buscar libro por titulo</h5></div>
     <div>
-        <form action="/libros" method="GET" enctype="multipart/form-data">
-            <select class="filtrar-select" name="idLibro">
+        <form action="/book" method="GET" enctype="multipart/form-data">
+            <select class="filtrar-select" name="idBook">
                 <option selected disabled>Seleccionar</option>
                 <option>Todos</option>
-                <option th:each="libro : ${librosA}" th:value="${libro.id}" th:text="${libro.title}"></option>
+                <option th:each="book : ${booksActive}" th:value="${book.id}" th:text="${book.title}"></option>
             </select>
             <div class="filtrar-boton">
                 <button type="submit" class="btn btn-warning">Buscar</button>
@@ -41,40 +41,53 @@
 </div>
 
 <div sec:authorize="hasRole('ADMIN')" class="form-group2 centrar-boton text-center">
-    <a href="/libros/registro" class="btn btn-dark" tabindex="-1" role="button">Agregar libro</a>
+    <a href="/book/register" class="btn btn-dark" tabindex="-1" role="button">Agregar libro</a>
 </div>
 
 <div class="contenedor">
-    <div class="contenedorHijo" th:each="libro : ${libros}">
-        <div class="card mb-3 bg-dark text-white">
-            <div class="row g-0">
-                <div class="col-md-4 imagen-card">
-                    <img th:src="@{'/foto/libro/' + ${libro.id}}" class="img-fluid rounded-start" alt="Portada Libro">
-                </div>
-                <div class="col-md-8">
-                    <div class="card-body">
-                        <h5 class="card-title" th:text="${libro.title}"></h5><br>
-                        <ul>
-                            <li th:text="'ISBN: ' + ${libro.isbn}"></li>
-                            <li th:text="'AUTOR: ' + ${libro.author.name}"></li>
-                            <li th:text="'EDITORIAL: ' + ${libro.publisher.name}"></li>
-                            <li th:text="'EJEMPLARES DISPONIBLES: ' + ${libro.amountCopies}"></li>
-                        </ul>
-                        <div class="form-group2 text-center">
-                            <a class="btn btn-warning" th:href="@{/libros/mostrar/__${libro.id}__}" role="button">Ver
-                                más</a>
-                            <a sec:authorize="hasRole('ADMIN')" th:if="${libro.baja != null}"
-                               th:href="@{/libros/alta(id=__${libro.id}__)}" title="Dar de Alta"><i
-                                    class="fa fa-arrow-up text-success"></i></a>
-                            <a sec:authorize="hasRole('ADMIN')" th:unless="${libro.baja != null}"
-                               th:href="@{/libros/baja(id=__${libro.id}__)}" title="Dar de Baja"><i
-                                    class="fa fa-arrow-down text-danger"></i></a>
-                            <a sec:authorize="hasRole('ADMIN')" th:href="@{/libros/modificar(id=__${libro.id}__)}"
-                               title="Modificar"><i class="fas fa-feather-alt text-warning"></i></a>
-                            <a sec:authorize="hasRole('ADMIN')" th:href="@{/libros/eliminar(id=__${libro.id}__)}"
-                               title="Eliminar"><i class="fas fa-archive text-danger"></i></a>
-                        </div>
-                    </div>
+
+    <div class="contenedorHijo" th:each="book : ${books}">
+
+        <div class="card">
+
+            <div class="col-md-4 imagen-card">
+                <img th:src="@{'/photo/book/' + ${book.id}}" class="rounded-start" alt="Portada Libro">
+            </div>
+
+            <div class="col-md-8 card-body">
+
+                <h5 class="card-title" th:text="${book.title}"></h5><br>
+
+                <ul>
+                    <li th:text="'ISBN: ' + ${book.isbn}"></li>
+                    <li th:text="'AUTOR: ' + ${book.author.name}"></li>
+                    <li th:text="'EDITORIAL: ' + ${book.publisher.name}"></li>
+                    <li th:text="'EJEMPLARES DISPONIBLES: ' + ${book.amountCopies}"></li>
+                </ul>
+
+                <div class="botones">
+                    <a class="btn btn-warning" th:href="@{'/book/view/' + ${book.id}}" role="button">Ver más</a>
+
+                    <a sec:authorize="hasRole('ADMIN')" th:if="${book.unsubscribe != null}"
+                       th:href="@{'/book/high/' + ${book.id}}" title="Dar de Alta">
+                        <i class="fa fa-arrow-up text-success"></i>
+                    </a>
+
+                    <a sec:authorize="hasRole('ADMIN')" th:unless="${book.unsubscribe != null}"
+                       th:href="@{'/book/low/' + ${book.id}}" title="Dar de Baja">
+                        <i class="fa fa-arrow-down text-danger"></i>
+                    </a>
+
+                    <a sec:authorize="hasRole('ADMIN')" th:href="@{'/book/update/' + ${book.id}}"
+                       title="Modificar">
+                        <i class="fas fa-feather-alt text-warning"></i>
+                    </a>
+
+                    <a sec:authorize="hasRole('ADMIN')" th:href="@{'/book/delete/' + ${book.id}}"
+                       title="Eliminar">
+                        <i class="fas fa-archive text-danger"></i>
+                    </a>
+
                 </div>
             </div>
         </div>
