--- a/Biblioteca-Digital/src/main/resources/templates/login.html
+++ b/Biblioteca-Digital/src/main/resources/templates/login.html
@@ -1,50 +1,40 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 <head>
-    <title>Biblioteca - Login</title>
+    <title>Biblioteca - Iniciar Sesión</title>
     <head th:replace="~{/fragments/head :: head}"></head>
 </head>
 
 <body>
 <nav th:replace="~{/fragments/navbar :: nav}"></nav>
 
-<h1 class="mb-3">Iniciar sesion</h1>
+<main class="form-signin w-100 m-auto">
 
-<div class="d-flex justify-content-center">
-    <div class="w-75 text-light d-flex justify-content-center">
-        <div class="mb-3">
+    <form th:action="@{/login}" method="POST">
 
-            <form th:action="@{/logincheck}" method="POST">
+        <h1 class="h3 mb-3 fw-normal">Iniciar Sesión</h1>
 
-                <p th:if="${error} != null" th:text="${error}" class="error"></p>
-                <p th:if="${logout} != null" th:text="${logout}" class="logout text-success"></p>
+        <p th:if="${error} != null" th:text="${error}" class="error"></p>
+        <p th:if="${logout} != null" th:text="${logout}" class="logout text-success"></p>
 
-                <div class="mb-3">
-                    <label for="username" class="col col-form-label">E-mail</label>
-                    <div class="col-sm-10 w-100">
-                        <input type="email" class="form-control" id="username" name="username" th:value="${username}"/>
-                    </div>
-                </div>
-
-                <div class="mb-3">
-                    <label for="password" class="col col-form-label">Contraseña</label>
-                    <div class="col-sm-10 w-100">
-                        <input type="password" class="form-control" id="password" name="password"
-                               th:value="${password}"/>
-                    </div>
-                </div>
-
-                <div class="d-grid gap-2 col-6 mx-auto boton-libro">
-                    <button type="submit" class="btn btn-primary">Ingresar</button>
-                </div>
-            </form>
+        <div class="form-floating">
+            <input type="email" class="form-control" id="username" name="username" placeholder="name@example.com"
+                   th:value="${username}">
+            <label for="username">Email</label>
         </div>
-    </div>
-</div>
+        <div class="form-floating">
+            <input type="password" class="form-control" id="password" name="password" placeholder="Contraseña"
+                   th:value="${password}">
+            <label for="password">Contraseña</label>
+        </div>
+
+        <button class="btn btn-primary w-100 py-2" type="submit">Ingresar</button>
+
+    </form>
+</main>
 
 <footer th:replace="~{/fragments/footer :: footer}"></footer>
 
 <script th:replace="~{/fragments/script :: script}"></script>
 </body>
-}
 </html>
