--- a/Biblioteca-Digital/src/main/resources/templates/registro.html
+++ b/Biblioteca-Digital/src/main/resources/templates/registro.html
@@ -14,84 +14,95 @@
     <div class="w-75 text-light d-flex justify-content-center">
         <div class="mb-3">
 
-            <form th:action="@{/registrar}" method="POST" enctype="multipart/form-data">
+            <form th:action="@{/user/register}" method="POST" enctype="multipart/form-data" th:object="${user}">
 
                 <p th:if="${error != null}" th:text="${error}" class="error"></p>
 
                 <div class="mb-3">
-                    <label for="nombre" class="col col-form-label">Nombre</label>
+                    <label for="name" class="col col-form-label">Nombre</label>
                     <div class="col-sm-10 w-100">
-                        <input type="text" class="form-control" id="nombre" name="nombre" th:value="${nombre}"/>
+                        <input type="text" class="form-control" id="name" name="name" th:field="*{name}" required/>
                     </div>
+                    <span th:errors="*{name}" class="text-danger" th:if="${#fields.hasErrors('name')}"></span>
                 </div>
 
                 <div class="mb-3">
-                    <label for="apellido" class="col col-form-label">Apellido</label>
+                    <label for="lastName" class="col col-form-label">Apellido</label>
                     <div class="col-sm-10 w-100">
-                        <input type="text" class="form-control" id="apellido" name="apellido" th:value="${apellido}"/>
+                        <input type="text" class="form-control" id="lastName" name="lastName" th:field="*{lastName}"/>
                     </div>
+                    <span th:errors="*{lastName}" class="text-danger" th:if="${#fields.hasErrors('lastName')}"></span>
                 </div>
 
                 <div class="mb-3">
-                    <label for="documento" class="col col-form-label">Documento</label>
+                    <label for="dni" class="col col-form-label">Documento</label>
                     <div class="col-sm-10 w-100">
-                        <input type="text" class="form-control" id="documento" name="documento"
-                               th:value="${documento}"/>
+                        <input type="text" class="form-control" id="dni" name="dni" th:field="*{dni}" required/>
                     </div>
+                    <span th:errors="*{dni}" class="text-danger" th:if="${#fields.hasErrors('dni')}"></span>
                 </div>
 
                 <div class="mb-3">
-                    <label for="telefono" class="col col-form-label">Telefono</label>
+                    <label for="phone" class="col col-form-label">Teléfono</label>
                     <div class="col-sm-10 w-100">
-                        <input type="text" class="form-control" id="telefono" name="telefono" th:value="${telefono}"/>
+                        <input type="text" class="form-control" id="phone" name="phone" th:field="*{phone}" required/>
                     </div>
+                    <span th:errors="*{phone}" class="text-danger" th:if="${#fields.hasErrors('phone')}"></span>
                 </div>
 
                 <div class="mb-3">
-                    <label for="sexo" class="col col-form-label">Sexo</label>
+                    <label for="gender" class="col col-form-label">Genero</label>
                     <div class="col-sm-10 w-100">
-                        <select class="form-select" id="sexo" name="sexo">
-                            <option th:each="sexoAux : ${sexos}" th:value="${sexoAux}" th:text="${sexoAux}"
-                                    th:selected="${sexo != null}"></option>
+                        <select class="form-select" id="gender" name="gender">
+                            <option selected disabled>Seleccionar...</option>
+                            <option th:each="gender : ${genders}" th:text="${gender}" th:value="${gender}"
+                                    th:field="*{gender}"></option>
                         </select>
                     </div>
+                    <span th:errors="*{gender}" class="text-danger" th:if="${#fields.hasErrors('gender')}"></span>
                 </div>
 
                 <div class="mb-3">
-                    <label for="idZona" class="col col-form-label">Zona</label>
+                    <label for="idCity" class="col col-form-label">Ciudad</label>
                     <div class="col-sm-10 w-100">
-                        <select class="form-select" id="idZona" name="idZona">
-                            <option th:each="zona : ${zonas}" th:value="${zona.id}" th:text="${zona.nombre}"
-                                    th:selected="${idZona != null && idZona == zona.id}"></option>
+                        <select class="form-select" id="idCity" name="idCity">
+                            <option selected disabled>Seleccionar...</option>
+                            <option th:each="city : ${cities}" th:text="${city.name}" th:value="${city.id}"
+                                    th:field="*{idCity}"></option>
                         </select>
                     </div>
+                    <span th:errors="*{idCity}" class="text-danger" th:if="${#fields.hasErrors('idCity')}"></span>
                 </div>
 
                 <div class="mb-3">
-                    <label for="archivo" class="col col-form-label">Foto</label>
+                    <label for="file" class="col col-form-label">Foto</label>
                     <div class="col-sm-10 w-100">
-                        <input type="file" class="form-control" id="archivo" name="archivo" th:value="${archivo}"/>
+                        <input type="file" class="form-control" id="file" name="file" th:field="*{photoDto.file}"/>
                     </div>
                 </div>
 
                 <div class="mb-3">
-                    <label for="mail" class="col col-form-label">E-mail</label>
+                    <label for="email" class="col col-form-label">Email</label>
                     <div class="col-sm-10 w-100">
-                        <input type="email" class="form-control" id="mail" name="mail" th:value="${mail}"/>
+                        <input type="email" class="form-control" id="email" name="email" th:field="*{email}"/>
                     </div>
+                    <span th:errors="*{email}" class="text-danger" th:if="${#fields.hasErrors('email')}"></span>
                 </div>
 
                 <div class="mb-3">
-                    <label for="clave" class="col col-form-label">Contraseña</label>
+                    <label for="password" class="col col-form-label">Contraseña</label>
                     <div class="col-sm-10 w-100">
-                        <input type="password" class="form-control" id="clave" name="clave" th:value="${clave}"/>
+                        <input type="password" class="form-control" id="password" name="password"
+                               th:field="*{password}"/>
                     </div>
+                    <span th:errors="*{password}" class="text-danger" th:if="${#fields.hasErrors('name')}"></span>
                 </div>
 
                 <div class="mb-3">
-                    <label for="clave2" class="col col-form-label">Repetir Contraseña</label>
+                    <label for="matchingPassword" class="col col-form-label">Repetir Contraseña</label>
                     <div class="col-sm-10 w-100">
-                        <input type="password" class="form-control" id="clave2" name="clave2" th:value="${clave2}"/>
+                        <input type="password" class="form-control" id="matchingPassword" name="matchingPassword"
+                               th:field="*{matchingPassword}"/>
                     </div>
                 </div>
 
